<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background_color">

    <!-- Shapeable Image View like Imageview but can add border -->
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/shpImgViewIcon"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/circleImageView"
        app:srcCompat="@mipmap/ic_launcher"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp"
        tools:ignore="ImageContrastCheck" />

    <!-- Text: "Sign in to continue" -->
    <TextView
        android:id="@+id/txtSignInToContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/sign_in_to_continue"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/shpImgViewIcon"
        app:layout_constraintStart_toStartOf="@+id/shpImgViewIcon"
        app:layout_constraintTop_toBottomOf="@+id/shpImgViewIcon" />

    <!-- Prompt user to enter USERNAME -->
    <EditText
        android:id="@+id/edtTextUsername"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_username_input"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintEnd_toEndOf="@+id/txtSignInToContinue"
        app:layout_constraintStart_toStartOf="@+id/txtSignInToContinue"
        app:layout_constraintTop_toBottomOf="@+id/txtSignInToContinue"
        android:autofillHints=""
        tools:ignore="VisualLintTextFieldSize" />

    <!-- Prompt user to enter PASSWORD-->
    <EditText
        android:id="@+id/edtTextPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_password_input"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintEnd_toEndOf="@+id/edtTextUsername"
        app:layout_constraintStart_toStartOf="@+id/edtTextUsername"
        app:layout_constraintTop_toBottomOf="@+id/edtTextUsername"
        android:autofillHints=""
        tools:ignore="VisualLintTextFieldSize" />

    <!-- Text: "Don't have an account? "-->
    <TextView
        android:id="@+id/txtDontHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/don_t_have_an_account_sign_up"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="@+id/edtTextPassword"
        app:layout_constraintHorizontal_bias="0.383"
        app:layout_constraintStart_toStartOf="@+id/edtTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/edtTextPassword"
        app:layout_constraintVertical_bias="0.5" />

    <!-- TextView "here" that clickable and point user to Sign Up page -->
    <TextView
        android:id="@+id/txtSignUpLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:clickable="true"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="@string/here"
        android:textColor="@color/blue_link"
        app:layout_constraintBottom_toBottomOf="@+id/txtDontHaveAccount"
        app:layout_constraintStart_toEndOf="@+id/txtDontHaveAccount"
        app:layout_constraintTop_toTopOf="@+id/txtDontHaveAccount"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="KeyboardInaccessibleWidget,TextContrastCheck" />

    <!-- Login Button id: btnLogin    -->
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@+id/edtTextPassword"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/edtTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/txtDontHaveAccount" />

</androidx.constraintlayout.widget.ConstraintLayout>